[package]
name = "egui-winit-ash-integration"
version = "0.3.0"
authors = ["Orito Itsuki <orito.itsuki@gmail.com>"]
description = "This is the egui integration crate for winit and ash."
edition = "2018"
homepage = "https://docs.rs/egui-winit-ash-integration"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/egui-winit-ash-integration"
readme = "README.md"
repository = "https://github.com/MatchaChoco010/egui-winit-ash-integration"
categories = ["gui", "game-development"]
keywords = ["gui", "winit", "ash", "vulkan", "gpu-allocator"]
include = [
  "src/*.rs",
  "src/shaders/spv/*.spv",
  "Cargo.toml",
]

[features]
default = [ "gpu-allocator-feature", "egui-winit/default" ]
gpu-allocator-feature = [ "gpu-allocator" ]

## Underlying egui-winit features
accesskit = ["egui-winit/accesskit"]
android-game-activity = ["egui-winit/android-game-activity"]
android-native-activity = ["egui-winit/android-native-activity"]
bytemuck = ["egui-winit/bytemuck"]
clipboard = ["egui-winit/clipboard"]
links = ["egui-winit/links"]
puffin = ["egui-winit/puffin"]
serde = ["egui-winit/serde"]
wayland = ["egui-winit/wayland"]
x11 = ["egui-winit/x11"]


[dependencies]
anyhow = "1.0.53"
ash = { version="0.37.1", default-features = false }
bytemuck = "1.7.3"
egui = "0.23.0"
egui-winit = { version = "0.23.0", default-features = false }
gpu-allocator = { version = "0.23.0", default-features = false, features = ["vulkan"], optional = true }
raw-window-handle = { version="0.5.0" }

[dev-dependencies]
ash-window = "0.12.0"
crevice = "0.14.0"
image = "0.24.0"
memoffset = "0.9.0"
mint = "0.5.9"
tobj = "4.0.0"
ash = { version="0.37.1", default-features = false, features = ["linked", "debug"] }

[dev-dependencies.cgmath]
version = "0.18.0"
features = ["mint"]
